# 05-sdk-app-starter

./: README.md  pyproject.toml
agents/: challenger.agent.md  judge.agent.md  triage.agent.md
alerts/: codeql-sample.json  dependabot-sample.json
prompts/: challenge-task.md  judge-task.md  triage-task.md
skills/appsec-alert-triage/: SKILL.md
skills/challenge-triage-report/: SKILL.md
skills/report-quality/: SKILL.md
src/appsec_triage_assistant/: __init__.py  __main__.py  evidence_bundle.py  sdk_todo.py
tests/: test_evidence_bundle.py  test_sdk_todo.py
