[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "appsec-triage-assistant"
version = "0.1.0"
description = "Workshop starter for a controlled AppSec alert triage assistant."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
sdk = ["github-copilot-sdk"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
